# vr-reservation

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile.backend  main.py  pyproject.toml  run.sh
backend/config/: config.py  database.py  init_db.py
backend/migrations/: env.py
backend/migrations/versions/: 23e6559d0dab_add_cost_in_bookings.py  5b391de0ab31_table_users.py  68e5ac6faa5a_add_headset_booking_settings_tables.py  e70042f8254d_add_created_at_column.py
backend/src/auth/: auth_router.py
backend/src/auth/utils/: auth_user.py  create_user.py  jwt_manager.py  password_manager.py
backend/src/models/: bookings.py  headsets.py  settings.py  users.py
backend/src/routers/: admin_router.py  bookings_router.py  email_router.py  headsets_router.py  users_router.py
backend/src/schemas/: booking_schema.py  email_schema.py  headset_schema.py  settings_schema.py  user_schema.py
backend/src/services/: celery_service.py  email_service.py
backend/src/utils/: booking_utils.py  convert_time.py
frontend/: Dockerfile.frontend  package-lock.json  package.json  vite.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.jsx  LoginForm.jsx  LogoutButton.jsx  RegisterForm.jsx  index.css
frontend/src/components/: TimeBookingCard.jsx
